--- a/migration_scripts/e2e_migration_playbook.ipynb
+++ b/migration_scripts/e2e_migration_playbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,13 +549,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Executing statement: INSERT INTO gyn_history (id, patient_id, date_of_visit, cause_of_visit, ter, current_disease, past_medical_history, temp...\n",
+      "Successfully executed 1 statements\n",
       "(1, 3, 1, 1, '2014-01-23 02:00:29', '2014-02-21 09:55:54', '2014-01-22', 'Πρώτο Ραντεβού', '2012-02-07', 'Όχι κάτι σοβαρό', 'Τι να λέμε', 36, 12, 5, 'καλή δείχνει', 'μακαρόνια με σάλτσα', 164, 50, 'καλά', 'καθαροί', 'επίπεδη', 'οκ', 'οκ', 'οκ', 'οκ', 'οκ', 'Ok', 1)\n",
       "(2, 3, 1, 1, '2014-01-23 02:02:47', '2014-01-23 02:03:32', '2014-01-01', 'ναι', '2012-03-08', None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 0)\n",
       "(3, 3, 1, 1, '2014-01-23 02:03:38', '2014-01-23 13:35:53', '2014-01-09', 'Να δω το παιδάκι μου', '2014-01-09', 'Mobile', 'Διακοπές το καλοκαίρι', 21, 10, 55, 'σε γνωρίζω από την...', 'και από αυτό δεν πάμε πίσω', 165, 50, None, None, None, None, None, None, None, None, None, 1)\n",
@@ -565,9 +567,9 @@
     }
    ],
    "source": [
+    "delete_records(target_tablename, db_path)\n",
     "insert_records(target_tablename, db_path)\n",
-    "fetch_records(target_tablename, db_path)\n",
-    "# delete_records(target_tablename, db_path)"
+    "fetch_records(target_tablename, db_path)"
    ]
   },
   {
@@ -579,21 +581,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'tblmedexam'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m target_tablename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmedical_exams\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m data_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m8\u001b[39m \u001b[38;5;66;03m# this is the index in the json_data list where the relevant data is stored\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m sql_output \u001b[38;5;241m=\u001b[39m convert_json_to_insert_sql(json_data[data_index][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[43mcolumn_mapping\u001b[49m\u001b[43m[\u001b[49m\u001b[43msource_tablename\u001b[49m\u001b[43m]\u001b[49m, target_tablename \u001b[38;5;241m=\u001b[39m target_tablename)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# print(sql_output)\u001b[39;00m\n\u001b[0;32m      7\u001b[0m output_file \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(assets_dir, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget_tablename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.sql\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'tblmedexam'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "source_tablename = 'tblmedexam'\n",
     "target_tablename = 'medical_exams'\n",
@@ -604,6 +594,31 @@
     "output_file = os.path.join(assets_dir, f'{target_tablename}.sql')\n",
     "with open(output_file, 'w', encoding='utf-8') as f:\n",
     "    f.write(sql_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executing statement: INSERT INTO medical_exams (id, patient_id, date_of_exam, exam_type, value, created_on, created_by, last_updated_on, last...\n",
+      "Successfully executed 1 statements\n",
+      "(1, 3, 1, 1, None, '2017-10-26 11:47:49', '2014-05-08', '4', '300', 1)\n",
+      "(3, 3, 1, 1, None, '2014-07-26 16:09:30', '2014-05-02', '3', '250000', 1)\n",
+      "(4, 3, 1, 1, '2014-05-05 21:16:59', '2014-07-26 16:06:15', '2014-05-05', '3', '160000', 1)\n",
+      "(5, 3, 1, 1, '2014-05-08 09:30:28', '2014-05-10 17:08:26', '2014-05-08', '7', '80%', 1)\n",
+      "(6, 3, 1, 1, '2014-05-10 17:08:56', '2014-05-10 17:08:56', '2014-05-08', '9', '10%', 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# delete_records(target_tablename, db_path)\n",
+    "insert_records(target_tablename, db_path)\n",
+    "fetch_records(target_tablename, db_path)"
    ]
   },
   {
