--- a/fetusapp/notebooks/openai_api_usage.ipynb
+++ b/fetusapp/notebooks/openai_api_usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f1e4aebd",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "from datetime import datetime, timedelta\n",
     "import pytz\n",
     "import plotly.express as px\n",
-    "\n",
+    "from IPython.display import HTML, display\n",
     "\n",
     "load_dotenv(\"../../keys.env\")\n",
     "\n",
@@ -165,158 +165,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "063f87c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requesting data from 2025-10-16 to 2025-10-20 (UTC)\n",
-      "Fetching page 1...\n",
-      "  ✅ All data retrieved (1 page(s))\n",
-      "\n",
-      "============================================================\n",
-      "Total Cost: $0.0782 USD\n",
-      "Days with usage: 5\n",
-      "============================================================\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "date",
-         "rawType": "datetime64[ns]",
-         "type": "datetime"
-        },
-        {
-         "name": "cost_usd",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "8500a360-e8b8-47b4-89ef-ed59197cda49",
-       "rows": [
-        [
-         "0",
-         "2025-10-16 00:00:00",
-         "0.020093549999999998"
-        ],
-        [
-         "1",
-         "2025-10-17 00:00:00",
-         "0.0284448"
-        ],
-        [
-         "2",
-         "2025-10-18 00:00:00",
-         "0.0007009499999999999"
-        ],
-        [
-         "3",
-         "2025-10-19 00:00:00",
-         "7.2e-05"
-        ],
-        [
-         "4",
-         "2025-10-20 00:00:00",
-         "0.028854150000000005"
-        ]
-       ],
-       "shape": {
-        "columns": 2,
-        "rows": 5
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>cost_usd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025-10-16</td>\n",
-       "      <td>0.020094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025-10-17</td>\n",
-       "      <td>0.028445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-10-18</td>\n",
-       "      <td>0.000701</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025-10-19</td>\n",
-       "      <td>0.000072</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025-10-20</td>\n",
-       "      <td>0.028854</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        date  cost_usd\n",
-       "0 2025-10-16  0.020094\n",
-       "1 2025-10-17  0.028445\n",
-       "2 2025-10-18  0.000701\n",
-       "3 2025-10-19  0.000072\n",
-       "4 2025-10-20  0.028854"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Usage:\n",
     "\n",
-    "df = get_llm_cost(delta=4)  # Last 30 days\n",
+    "df = get_llm_cost(delta=5)  # Last 30 days\n",
     "\n",
     "fig = plot_costs_interactive_px(df)\n",
     "\n",
-    "# display(HTML(fig.to_html(full_html=False, include_plotlyjs='inline')))"
+    "display(HTML(fig.to_html(full_html=False, include_plotlyjs='inline')))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dace35a",
+   "id": "c2a3417a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import webbrowser\n",
+    "\n",
+    "# Opens your billing page in the browser\n",
+    "webbrowser.open('https://platform.openai.com/settings/organization/billing/overview')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97bcca47",
    "metadata": {},
    "outputs": [],
    "source": []
